--- a/app/view/index.html
+++ b/app/view/index.html
@@ -21,15 +21,15 @@
                        accept='image/*'
                        onchange='showPicked(this)'>
             </div>
-            <button class='choose-file-button' type='button' onclick='showPicker()'>Select Image</button>
+            <button class='choose-file-button' type='button' onclick='showPicker()'>选择图像</button>
             <div class='upload-label'>
-                <label id='upload-label'>No file chosen</label>
+                <label id='upload-label'>未选择图像文件</label>
             </div>
             <div>
                 <img id='image-picked' class='no-display' alt='Chosen Image' height='200'>
             </div>
             <div class='analyze'>
-                <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Analyze</button>
+                <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>开始分析</button>
             </div>
             <div class='result-label'>
                 <label id='result-label'></label>
